Initial push of redblock module